增加页面路由跳转

--- a/src/app/home/style.scss
+++ b/src/app/home/style.scss
@@ -2,7 +2,7 @@
     height: 100%;
 }
 .header{
-    background: #1c88e5;
+    background: #1c88e5!important;
     .ant-row{
         height: 100%;
     }
