--- a/src/app/login/style.scss
+++ b/src/app/login/style.scss
@@ -1,3 +1,36 @@
-.test{
-    color: skyblue;
+.login{
+    .ant-row-flex{
+        margin-top: 72px;
+    }
+    .ant-col{
+        font-size: 33px;
+        font-weight: 600;
+        .login_img{
+            width: 44px;
+            height: 44px;
+            position: relative;
+            bottom: 4px;
+            right: 10px;
+            img{
+                width: 100%;
+                height: 100%;
+            }
+        }
+    }
+    .login_bg{
+        position: fixed;
+    }
+    .ant-form{
+        width: 364px;
+        .ant-row,.ant-form-item-children{
+            width: 100%;
+            .ant-input{
+                height: 40px;
+            }
+        }
+    }
+    .ant-btn{
+        width: 100%;
+        height: 40px!important;
+    }
 }
